<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registrar Datos del usuario"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:padding="5dp"/>

            <ImageView
                android:id="@+id/imagen"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                tools:srcCompat="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/txt_documento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/feedbackDocumento"
                android:inputType="number" />
            <EditText
                android:id="@+id/txt_nombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/feedbackname"
                />
            <EditText
                android:id="@+id/txt_edad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/feedbackedad"
                android:inputType="number" />

            <EditText
                android:id="@+id/txt_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/feedbackpeso"/>

            <EditText
                android:id="@+id/txt_estatura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/feedbackestatura"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedbackGenero"
                android:textSize="20sp"
                android:layout_margin="5dp"
                />

            <RadioGroup
                android:id="@+id/opcionGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_f"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:text="@string/feedbackFemenino"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_m"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"

                    android:layout_weight="1"
                    android:text="@string/feedbackMasculino"
                    android:textSize="18sp" />
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedbackTipoUsuario"
                android:textSize="20sp"
                android:layout_margin="5dp"
                />


            <Spinner
                android:id="@+id/sp_tipo_usuario"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:entries="@array/feedbacktipousuario"
                android:textDirection="firstStrongRtl"
                android:textSize="20sp"></Spinner>
         </LinearLayout>

        <Button
            android:id="@+id/bt_calcularIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:onClick="enviarDatos"
            android:padding="10dp"
            android:text="@string/feedbackIMC"
            android:textColor="#FAF7F7"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>